--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<script type="text/javascript" src="chat.bundle.js"></script>
 	<script src="html2canvas.min.js"></script>
 	<!-- gif -->
-	<script src="./gif.js"></script>
-	<script src="./gif.worker.js"></script>
+	<script src="gif.js"></script>
+	<script src="gif.worker.js"></script>
 </head>
 <body>
 	<div id="vueApp" class="wrapper">
