--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -1610,7 +1610,7 @@ button:focus {
       <div class="number">4</div>
     </div>
     <div class="subtitle">哎呀。看来你拐错弯了。</div>
-     <a href="https://www.zxki.cn/"><button>返回</button></a>
+     <a href="https://xgzy.pages.dev"><button>返回</button></a>
   </div>
   <div style="display:none">
   <script type="text/javascript"> 
@@ -1618,7 +1618,7 @@ var t=10;
 setInterval("refer()",500); 
 function refer(){ 
  if(t==0){ 
- location.href="https://www.zxki.cn/";
+ location.href="https://xgzy.pages.dev";
  } 
  document.getElementById('show').innerHTML=""+t+"";
  t--;
