--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<script type="text/javascript" src="chat.bundle.js"></script>
 	<script src="html2canvas.min.js"></script>
 	<!-- gif -->
-	<script src="/.gif.js"></script>
-	<script src="/.gif.worker.js"></script>
+	<script src="gif.js"></script>
+	<script src="gif.worker.js"></script>
 </head>
 <body>
 	<div id="vueApp" class="wrapper">
@@ -109,6 +109,7 @@
 						<div class="tab-pane active" id="tabContent2">
 							<div class="dialog-user">
 								<div class="dialog-user-title">编辑和选择用户（<font>第一个用户默认是自己，点击头像可更换头像哦</font>）</div>
+        <p class="c_lsxg c_lysxg"><a href="https://xzwzl6.github.io/erweimazanshang" target="_blank">👉赞赏轩哥哥</a></p>
 								<div class="dialog-user-items">
 									<div class="dialog-user-item el-remove">
 										<div class="dialog-user-face">
